--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -19,6 +19,24 @@ img {
 	font-size: 72px;
 	font-weight: 700;
 	line-height: normal;
+
+/* 	&--decor {
+		position: relative;
+	}
+
+	&--decor::after {
+		content: "";
+
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		width: 268px;
+		height: 24px;
+		z-index: -1;
+
+		background-image: url('./img/discover/underline.svg');
+		background-repeat: no-repeat;
+	} */
 }
 
 .text {
@@ -27,7 +45,8 @@ img {
 	font-style: normal;
 	font-weight: 450;
 	line-height: 150%;
-	p+p{
+
+	p+p {
 		margin: 1em 0 0 0;
 	}
 }
